@startuml Locatorgis
' Define skin parameters for better readability
skinparam classAttributeIconSize 0
hide circle

entity users {
  *id : bigint [PK]
  --
  name : string
  username : string
  role : string
  email : string
  password : string
  created_at : timestamp
  updated_at : timestamp
}

entity dashboards {
  *id : bigint [PK]
  --
  exca_id : bigint [FK]
  dumping_id : bigint [FK]
  waterdepth_id : bigint [FK]
  weather_id : bigint [FK]
  created_at : timestamp
  updated_at : timestamp
}

entity maps {
  *id : bigint [PK]
  --
  fileName : string
  file : string
  outputFile : string
  size : integer
  path : string
  created_at : timestamp
  updated_at : timestamp
}

entity excas {
  *id : bigint [PK]
  --
  loading_unit : string
  easting : decimal
  northing : decimal
  elevation_rl : decimal
  elevation_actual : decimal
  front_width : float
  front_height : float
  created_at : timestamp
  updated_at : timestamp
}

entity dumpings {
  *id : bigint [PK]
  --
  disposial : string
  easting : float
  northing : float
  elevation_rl : float
  elevation_actual : float
  created_at : timestamp
  updated_at : timestamp
}

entity materials {
  *id : bigint [PK]
  --
  name : string
  created_at : timestamp
  updated_at : timestamp
}

entity weathers {
  *id : bigint [PK]
  --
  cuaca : enum
  curah_hujan : float
  created_at : timestamp
  updated_at : timestamp
}

entity waterdepths {
  *id : bigint [PK]
  --
  shift : string
  qsv_1 : float
  h4 : float
  created_at : timestamp
  updated_at : timestamp
}

entity operasionals {
  *id : bigint [PK]
  --
  pit : string
  loading_unit_id : bigint [FK]
  dop : string
  dumping_id : bigint [FK]
  material_id : bigint [FK]
  created_at : timestamp
  updated_at : timestamp
}

entity lapangans {
  *id : bigint [PK]
  --
  map_id : bigint [FK]
  exca_id : bigint [FK]
  dumping_id : bigint [FK]
  waterdepth_id : bigint [FK]
  weather_id : bigint [FK]
  created_at : timestamp
  updated_at : timestamp
}

entity user_reports {
  *id : bigint [PK]
  --
  victim_name : string
  victim_age : integer
  injury_category : string
  activity : string
  incident_type : string
  incident_date_time : datetime
  incident_location : string
  asset_damage : string
  environmental_impact : string
  incident_description : text
  report_by : string
  report_date_time : datetime
  created_at : timestamp
  updated_at : timestamp
}

entity user_report_photos {
  *id : bigint [PK]
  --
  user_report_id : bigint [FK]
  photo_path : string
  created_at : timestamp
  updated_at : timestamp
}

entity incident_users {
  *id : bigint [PK]
  --
  user_report_id : bigint [FK]
  created_at : timestamp
  updated_at : timestamp
}

' RELATIONS
' RELATIONS
dashboards::exca_id --> excas::id
dashboards::dumping_id --> dumpings::id
dashboards::waterdepth_id --> waterdepths::id
dashboards::weather_id --> weathers::id

lapangans::map_id --> maps::id
lapangans::exca_id --> excas::id
lapangans::dumping_id --> dumpings::id
lapangans::waterdepth_id --> waterdepths::id
lapangans::weather_id --> weathers::id

operasionals::loading_unit_id --> excas::id
operasionals::dumping_id --> dumpings::id
operasionals::material_id --> materials::id
operasionals::weather_id --> weathers::id
operasionals::waterdepth_id --> waterdepths::id

excas::id --> dumpings::id
excas::id --> materials::id

user_report_photos::user_report_id --> user_reports::id
incident_users::user_report_id --> user_reports::id

' (Relasi Users)
' - Admin mengelola semua (akses penuh, relasi tidak perlu langsung di database tapi diatur di level aplikasi)
' - Operator bisa akses lapangans (via posisi dan maps) dan membuat user_reports

' Jadi: Optional relasi logis
' Operator memiliki akses ke lapangan melalui maps (maps punya banyak lapangan)
' Operator membuat user_report (bisa ditambahkan user_id jika ingin menghubungkan user -> user_reports)

' Jika ingin simpan relasi user_id di user_reports (tidak ada di model sekarang):
' user_reports::user_id --> users::id

@enduml
